@@ -11,6 +11,9 @@ For a complete change history, please see the Subversion log comments.
 
 Current Version (5.3-dev, SVN trunk):
 ------------------------------------
+
+- mappostgis.c: Fix trailing spaces in fixed varchar fields (#2817)
+
 - RFC48 implementation: GEOMTRANSFORM on styleObj (#2825)
 
 - mapwms.c: cleanup warnings with recent gcc versions (#2822)
